--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
-  "tabWidth": 4,
-  "semi": true
+  "trailingComma": "es5",
+  "endOfLine": "lf"
 }
