--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "endOfLine": "lf"
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "endOfLine": "lf",
+    "tabWidth": 2
 }
