--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.3.3",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
