--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.3.3",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mongoose": "^10.0.2",
